--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ services:
   mysql:
     image: mysql:8.0
     container_name: mysql-tarefas
+    env_file:
+      - .env
     environment:
-      MYSQL_ROOT_PASSWORD: lgl99VICTOR99@
-      MYSQL_DATABASE: tasks
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3307:3306"
     volumes:
@@ -17,6 +19,8 @@ services:
   backend:
     build: ./backend
     container_name: backend-tarefas
+    env_file:
+      - .env
     ports:
       - "8080:8080"
     depends_on:
